Make the form send an email

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -26,7 +26,7 @@
       </div>
     </nav>
 
-    <form method="POST" onsubmit="alertSubmissionMessage()">
+    <form action="mailto:firestation_project@abv.bg" method="POST" onsubmit="alertSubmissionMessage()">
       <h1>Регистрация</h1>
 
       <p>* Форма за регистриране на произшествие.</p>
