Add input fields to form

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -36,11 +36,6 @@
         <div class="inputfield">
           <label for="name">Име</label>
           <input type="text" name="name" id="name">
-        </div>  
-
-        <div class="inputfield">
-          <label for="email">Имейл*</label>
-          <input type="email" name="email" id="email" required>
         </div>
 
         <div class="inputfield">
@@ -51,7 +46,17 @@
         <div class="inputfield">
           <label for="accident_type">Тип произшествие*</label>
           <input type="text" name="accident_type" id="accident_type" required>
-        </div> 
+        </div>   
+
+        <div class="inputfield">
+          <label for="date">Дата</label>
+          <input type="date" id="date" name="date">
+        </div>
+
+        <div class="inputfield">
+          <label for="time">Час</label>
+          <input type="time" id="time" name="time">
+        </div>
 
         <div class="inputfield">
           <label for="team">Екип*</label>
