Make some input fields required

--- a/HTML/form.html
+++ b/HTML/form.html
@@ -49,13 +49,13 @@
         </div>   
 
         <div class="inputfield">
-          <label for="date">Дата</label>
-          <input type="date" id="date" name="date">
+          <label for="date">Дата*</label>
+          <input type="date" id="date" name="date" required>
         </div>
 
         <div class="inputfield">
-          <label for="time">Час</label>
-          <input type="time" id="time" name="time">
+          <label for="time">Час*</label>
+          <input type="time" id="time" name="time" required>
         </div>
 
         <div class="inputfield">
