Add Second Table

--- a/HTML/information.html
+++ b/HTML/information.html
@@ -161,32 +161,50 @@
         <tbody>
           <tr id="theader">
             <td>№</td>
-            <td>Имена на пожарникари в екипа</td>
+            <td>Номер на автомобил</td>
+            <td>Име на автомобил</td>
+            <td>Марка на автомобил</td>
+            <td>Лого на автомобил</td>
           </tr>
 
           <tr id="trow">
-            <td>Екип 1</td>
-            <td>Красимир Стоянов, Георги Димитров, Стоян Полименов, Михаил Георгиев, Александър Клингенберг</td>
+            <td>Екип Alpha</td>
+            <td>A 2354 CB</td>
+            <td>Engine B.R 1</td>
+            <td>E-ONE</td>
+            <td><img src="../Images/FireCarLogos/Logo-1.png"></td>
           </tr>
 
           <tr id="trow">
-            <td>Екип 2</td>
-            <td>Мириам Георгиева, Данислав Божидаров, Иван Костадинов, Боромир Трендафилов, Петър Господинов</td>
+            <td>Екип Beta</td>
+            <td>A 0234 HC</td>
+            <td>Engine B.R 9</td>
+            <td>FERRARA</td>
+            <td><img src="../Images/FireCarLogos/Logo-2.png"></td>
           </tr>
 
           <tr id="trow">
-            <td>Екип 3</td>
-            <td>Николай Захариев, Хари Потър, Божидар Иванов, Тереза Опанска, Андрей Лилов</td>
+            <td>Екип Gamma</td>
+            <td>A 7806 AA</td>
+            <td>Engine B.R 9</td>
+            <td>SPARTAN</td>
+            <td><img src="../Images/FireCarLogos/Logo-3.png"></td>
           </tr>
 
           <tr id="trow">
-            <td>Екип 4</td>
-            <td>Юлиян Филипов, Чавдар Тръстиков, Даяна Попова, Том Ридъл, Христо Колев</td>
+            <td>Екип Delta</td>
+            <td>A 7806 AA</td>
+            <td>Engine B.R 9</td>
+            <td>LADDER TOWER</td>
+            <td><img src="../Images/FireCarLogos/Logo-4.png"></td>
           </tr>
 
           <tr id="trow">
-            <td>Екип 5</td>
-            <td>Джон Маклейн, Лио Живков, Майкъл Джексън, Теодор Карчев, Радослав Димитров</td>
+            <td>Екип Epsilon</td>
+            <td>A 7806 AA</td>
+            <td>Engine B.R 9</td>
+            <td>SMEAL</td>
+            <td><img src="../Images/FireCarLogos/Logo-5.png"></td>
           </tr>
         </tbody>
       </table>
