--- a/HTML/form.html
+++ b/HTML/form.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-  <script src="..\JS/navbar_script.js" defer></script>
-  <script src="..\JS/form_script.js"></script>
+  <script src="..\JS/form_script.js" defer></script>
 </head>
 <body>
 
