--- a/HTML/information.html
+++ b/HTML/information.html
@@ -8,8 +8,7 @@
     <link href="..\CSS/info_style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <script src="..\JS/navbar_script.js" defer></script>
-    <script src="..\JS/info_script.js"></script>
+    <script src="..\JS/info_script.js" defer></script>
   </head>
 
   <body>
