--- a/HTML/information.html
+++ b/HTML/information.html
@@ -5,15 +5,16 @@
     <title>Information</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="..\CSS/info_style.css" rel="stylesheet" type="text/css"/>
+    <link href="../CSS/info_style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <script src="..\JS/navbar_script.js" defer></script>
     <script src="..\JS/info_script.js"></script>
+    
   </head>
 
   <body>
-
+    
     <nav class="navbar">
       <div class="logo"><img src="../Images/logo_bgremoved.png"></div>
 
