--- a/HTML/information.html
+++ b/HTML/information.html
@@ -159,7 +159,7 @@
       <table>
         <tbody>
           <tr id="theader">
-            <td>№</td>
+            <td>Номер</td>
             <td>Номер на автомобил</td>
             <td>Име на автомобил</td>
             <td>Марка на автомобил</td>
