Make changes to second table

--- a/HTML/information.html
+++ b/HTML/information.html
@@ -159,7 +159,7 @@
       <table>
         <tbody>
           <tr id="theader">
-            <td>Номер</td>
+            <td>№</td>
             <td>Номер на автомобил</td>
             <td>Име на автомобил</td>
             <td>Марка на автомобил</td>
@@ -167,7 +167,7 @@
           </tr>
 
           <tr id="trow">
-            <td>Екип Alpha</td>
+            <td>Екип 1</td>
             <td>A 2354 CB</td>
             <td>Engine B.R 1</td>
             <td>E-ONE</td>
@@ -175,7 +175,7 @@
           </tr>
 
           <tr id="trow">
-            <td>Екип Beta</td>
+            <td>Екип 2</td>
             <td>A 0234 HC</td>
             <td>Engine B.R 9</td>
             <td>FERRARA</td>
@@ -183,7 +183,7 @@
           </tr>
 
           <tr id="trow">
-            <td>Екип Gamma</td>
+            <td>Екип 3</td>
             <td>A 7806 AA</td>
             <td>Engine B.R 9</td>
             <td>SPARTAN</td>
@@ -191,7 +191,7 @@
           </tr>
 
           <tr id="trow">
-            <td>Екип Delta</td>
+            <td>Екип 4</td>
             <td>A 7806 AA</td>
             <td>Engine B.R 9</td>
             <td>LADDER TOWER</td>
@@ -199,7 +199,7 @@
           </tr>
 
           <tr id="trow">
-            <td>Екип Epsilon</td>
+            <td>Екип 5</td>
             <td>A 7806 AA</td>
             <td>Engine B.R 9</td>
             <td>SMEAL</td>
