Fix second table

--- a/HTML/information.html
+++ b/HTML/information.html
@@ -156,7 +156,7 @@
           <h3>РАЗПРЕДЕЛЕНИЕ НА ПОЖАРНИТЕ АВТОМОБИЛИ</h3>
 
           <div class="table">
-      <table>
+      <table id="table2">
         <tbody>
           <tr id="theader">
             <td>№</td>
