--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -13,6 +13,8 @@
 
   <body>
 
+    <!-- Navigation Bar -->
+
     <nav class="navbar">
       <div class="logo"><img src="../Images/logo_bgremoved.png"></div>
 
@@ -27,6 +29,8 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Contact information -->
 
     <h1 class="welcome_text">Контакти</h1>
 
@@ -56,6 +60,8 @@
         <div class="gmap_canvas"><iframe width="800" height="700" id="gmap_canvas" src="https://maps.google.com/maps?q=ul.%20%22Aleksander%20Veliki%22%2037%D0%92,%208000%20Wasraschdane,%20Burgas&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org">fmovies</a><br><a href="https://www.embedgooglemap.net">html google maps</a></div>
       </div>
     </div>
+
+    <!-- Footer -->
 
     <footer>
       <table>
