--- a/HTML/form.html
+++ b/HTML/form.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+  <!-- Navigation Bar -->
+
 	<nav class="navbar">
     <div class="logo"><img src="../Images/logo_bgremoved.png"></div>
 
@@ -24,6 +26,8 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Form -->
 
     <form action="mailto:firestation_project@abv.bg" method="POST" onsubmit="alertSubmissionMessage()">
       <h1>Регистрация</h1>
@@ -101,6 +105,8 @@
         </div>
       </div>
   	</form> 
+
+    <!-- Footer -->
 
     <footer>
       <table>
