--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <body>
 
+    <!-- Navigation Bar -->
+
     <nav class="navbar">
       <div class="logo"><img src="Images/logo_bgremoved.png"></div>
 
@@ -28,11 +30,14 @@
       </div>
     </nav>
 
+    <!-- Heading -->
+
     <div id="welcome_text">
       <h1>РСПБЗН-Бургас</h1>
       <h2>Районни служби „Пожарна безопасност и защита на населението”</h2>
     </div>
     
+    <!-- Page content -->
 
     <div class="content1">
       <div class="container1">
@@ -47,6 +52,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
 
     <footer>
       <table>
