Make final touches

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,104 +1,107 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Contacts</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="..\CSS/contact_style.css" rel="stylesheet" type="text/css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-    <script src="..\JS/navbar_script.js" defer></script>
-  </head>
+<head>
+  <title>Contacts</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="..\CSS/contact_style.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+  <script src="..\JS/navbar_script.js" defer></script>
+</head>
 
-  <body>
+<body>
 
-    <!-- Navigation Bar -->
+  <!-- Navigation Bar -->
 
-    <nav class="navbar">
-      <div class="logo"><img src="../Images/logo_bgremoved.png"></div>
+  <nav class="navbar">
+    <div class="logo"><img src="../Images/logo_bgremoved.png"></div>
 
-      <a href="#" class="button"><img src="..\Images/bars.png"></a>
+    <a href="#" class="button"><img src="..\Images/bars.png"></a>
 
-      <div class="links">
-        <ul>
-          <li><a href="..\index.html">Начало</a></li>
-          <li><a href="information.html">Информация</a></li>
-          <li><a href="contact.html">Контакти</a></li>
-          <li><a href="form.html">Регистрация</a></li>
-        </ul>
-      </div>
-    </nav>
+    <div class="links">
+      <ul>
+        <li><a href="..\index.html">Начало</a></li>
+        <li><a href="information.html">Информация</a></li>
+        <li><a href="contact.html">Контакти</a></li>
+        <li><a href="form.html">Регистрация</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- Contact information -->
+  <!-- Contact information -->
 
-    <h1 class="welcome_text">Контакти</h1>
+  <h1 class="welcome_text">Контакти</h1>
 
-    <div class="container">
-      <div class="info">
-        <h2>Районни служби „Пожарна безопасност и защита на населението” (РСПБЗН)</h2>
-        <br>
+  <div class="container">
+    <div class="info">
+      <h2>Районни служби „Пожарна безопасност и защита на населението” (РСПБЗН)</h2>
+      <br>
 
-        <h3>Първа РСПБЗН-Бургас</h3>
-        <p>8000 гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
-        <p>Телефон: 056/856665</p>
-        <p>Email: rspbzn_burgas-01@mvr.bg</p>
-        <p>Началник на Първа РСПБЗН-Бургас - главен инспектор Николай Николаев</p>
-        <p>Приемен ден: вторник от 10:00 до 12:00 часа</p>
-        <br>
+      <h3>Първа РСПБЗН-Бургас</h3>
+      <p>8000 гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
+      <p>Телефон: 056/856665</p>
+      <p>Email: rspbzn_burgas-01@mvr.bg</p>
+      <p>Началник на Първа РСПБЗН-Бургас - главен инспектор Николай Николаев</p>
+      <p>Приемен ден: вторник от 10:00 до 12:00 часа</p>
+      <br>
 
-        <h3>Втора РСПБЗН-Бургас</h3>
-        <p>8000 гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
-        <p>Телефон: 056/856285</p>
-        <p>Email: rspbzn_burgas-02@mvr.bg</p>
-        <p>Началник на Втора РСПБЗН-Бургас - главен инспектор Деян Стоянов</p>
-        <p>Приемен ден: вторник от 14:00 до 16:00 часа</p>
-        <br>
-      </div>
-
-      <div class="map">
-        <div class="gmap_canvas"><iframe width="800" height="700" id="gmap_canvas" src="https://maps.google.com/maps?q=ul.%20%22Aleksander%20Veliki%22%2037%D0%92,%208000%20Wasraschdane,%20Burgas&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org">fmovies</a><br><a href="https://www.embedgooglemap.net">html google maps</a></div>
-      </div>
+      <h3>Втора РСПБЗН-Бургас</h3>
+      <p>8000 гр. Бургас, ул. „ Александър Велики” № 37 Б</p>
+      <p>Телефон: 056/856285</p>
+      <p>Email: rspbzn_burgas-02@mvr.bg</p>
+      <p>Началник на Втора РСПБЗН-Бургас - главен инспектор Деян Стоянов</p>
+      <p>Приемен ден: вторник от 14:00 до 16:00 часа</p>
+      <br>
     </div>
 
-    <!-- Footer -->
+    <div class="map">
+      <div class="gmap_canvas"><iframe width="800" height="700" id="gmap_canvas"
+          src="https://maps.google.com/maps?q=ul.%20%22Aleksander%20Veliki%22%2037%D0%92,%208000%20Wasraschdane,%20Burgas&t=&z=13&ie=UTF8&iwloc=&output=embed"
+          frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+          href="https://fmovies2.org">fmovies</a><br><a href="https://www.embedgooglemap.net">html google maps</a></div>
+    </div>
+  </div>
 
-    <footer>
-      <table>
-        <tr>
-          <td id="coloumn1">
-            <div class="f-logo"><img src="..\Images/logo_bgremoved.png"></div>
+  <!-- Footer -->
 
-            <div class="f-links">
-              <ul>
-                <li><a href="form.html">Регистрация</a></li>
-                <li><a href="contact.html">Контакти</a></li>
-                <li><a href="information.html#sec-3">Информация за опасности</a></li>
-                <li><a href="information.html#sec-1">Служители</a></li>
-                <li><a href="information.html#sec-4">Класации</a></li>
-              </ul>
-            </div>
-          </td>
+  <footer>
+    <table>
+      <tr>
+        <td id="coloumn1">
+          <div class="f-logo"><img src="..\Images/logo_bgremoved.png"></div>
 
-          <td id="coloumn2">
-            <div class="information">
-              <h4>Пожарна Община Бургас</h4>
-              <p>ул. "Александър Велики" 37В, 8000 Възраждане, Бургас</p>
-              <p>056 856 321</p>
-            </div>
+          <div class="f-links">
+            <ul>
+              <li><a href="form.html">Регистрация</a></li>
+              <li><a href="contact.html">Контакти</a></li>
+              <li><a href="information.html#sec-3">Информация за опасности</a></li>
+              <li><a href="information.html#sec-1">Служители</a></li>
+              <li><a href="information.html#sec-4">Класации</a></li>
+            </ul>
+          </div>
+        </td>
 
-            <div class="socials">
-              <ul>
-                <a href="https://www.facebook.com/" target="_blank"><img src="..\Images/facebook.png"></a>
-                <a href="https://twitter.com/" target="_blank"><img src="..\Images/twitter.png"></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="..\Images/insta.png"></a>
-              </ul>
-            </div>
-          </td>
-        </tr>
-      </table>
-    </footer>
-  
-  </body>
+        <td id="coloumn2">
+          <div class="information">
+            <h4>Пожарна Община Бургас</h4>
+            <p>ул. "Александър Велики" 37В, 8000 Възраждане, Бургас</p>
+            <p>056 856 321</p>
+          </div>
+
+          <div class="socials">
+            <ul>
+              <a href="https://www.facebook.com/" target="_blank"><img src="..\Images/facebook.png"></a>
+              <a href="https://twitter.com/" target="_blank"><img src="..\Images/twitter.png"></a>
+              <a href="https://www.instagram.com/" target="_blank"><img src="..\Images/insta.png"></a>
+            </ul>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </footer>
+
+</body>
 
 </html>
