--- a/HTML/information.html
+++ b/HTML/information.html
@@ -296,8 +296,7 @@
       </div>
 
       <div id="map">
-        <iframe src="https://www.atlistmaps.com/map/fbfba33d-da4b-4dba-9752-3d134ed555fe?share=true" allow="geolocation"
-          frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://www.atlistmaps.com/map/1e57b4d4-d21f-4e0b-9cef-0b47e6983c5b?share=true" allow="geolocation" width="100%" height="400px" frameborder="0" scrolling="no" allowfullscreen></iframe>
       </div>
     </div>
 
