--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,6 +5,7 @@
   <title>Contacts</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="..\Images/logo_small.png">
   <link href="..\CSS/contact_style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
