--- a/HTML/form.html
+++ b/HTML/form.html
@@ -4,6 +4,7 @@
 <head>
   <title>Form</title>
   <link href="..\CSS/form_style.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="..\Images/logo_small.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
