--- a/HTML/form.html
+++ b/HTML/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Form</title>
+  <meta charset="utf-8">
   <link href="..\CSS/form_style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="..\Images/logo_small.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -137,7 +138,7 @@
 
           <div class="socials">
             <ul>
-              <a href="https://www.facebook.com/" target="_blank"><img src="..\Images/facebook.png"></a>
+              <a href="https://www.facebook.com/01-%D0%A0%D0%A1%D0%9F%D0%91%D0%97%D0%9D-%D0%91%D1%83%D1%80%D0%B3%D0%B0%D1%81-1140919412604079/" target="_blank"><img src="..\Images/facebook.png"></a>
               <a href="https://twitter.com/" target="_blank"><img src="..\Images/twitter.png"></a>
               <a href="https://www.instagram.com/" target="_blank"><img src="..\Images/insta.png"></a>
             </ul>
