--- a/HTML/information.html
+++ b/HTML/information.html
@@ -346,7 +346,7 @@
 
           <div class="socials">
             <ul>
-              <a href="https://www.facebook.com/" target="_blank"><img src="../Images/facebook.png"></a>
+              <a href="https://www.facebook.com/01-%D0%A0%D0%A1%D0%9F%D0%91%D0%97%D0%9D-%D0%91%D1%83%D1%80%D0%B3%D0%B0%D1%81-1140919412604079/" target="_blank"><img src="../Images/facebook.png"></a>
               <a href="https://twitter.com/" target="_blank"><img src="../Images/twitter.png"></a>
               <a href="https://www.instagram.com/" target="_blank"><img src="../Images/insta.png"></a>
             </ul>
