--- a/HTML/information.html
+++ b/HTML/information.html
@@ -106,7 +106,7 @@
       <a href="#">
         <div class="cardbig card1">
           <div class="counters1"></div>
-          <h5>Пожарни коли</h5>
+          <h5>Пожарникари</h5>
           <p>Брой действащи пожарникари</p>
         </div>
       </a>
